--- a/LA/header.tex
+++ b/LA/header.tex
@@ -121,7 +121,7 @@
 	mdframed={
 			linewidth=2pt,
 			rightline=false, topline=false, bottomline=false,
-			linecolor=CarnationPink!80!black,
+			linecolor=RoyalBlue!90!black,
 			nobreak=false
 		}
 ]{thmblueline}
