--- a/LA/Lectures/lec_3.tex
+++ b/LA/Lectures/lec_3.tex
@@ -225,7 +225,7 @@ Ax = b \quad \Longrightarrow \quad Ux = c \text{ \& } Lc = b \quad \Longrightarr
 
 \end{eg}
 
-\begin{theorem}
+\begin{theorem}\label{thm:1.5.2}
     If \[ A = L_1D_1U_1 \text{ and } A = L_2D_2U_2\]
     then \[L_1 = L_2, D_1 = D_2, U_1 = U_2\]
     i.e. if $A$ has $LDU$ decomposition, then it \red{\textbf{is}} unique.
