--- a/ADA/header.tex
+++ b/ADA/header.tex
@@ -1,7 +1,8 @@
 % basics
 \usepackage{xeCJK}
 \setCJKmainfont{Kaiti TC} % 新細明體
-\setCJKmainfont{Kaiti TC}[AutoFakeBold=6 , AutoFakeSlant=.2]
+\setCJKmainfont{Kaiti TC}[AutoFakeBold=5.0]
+
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -18,6 +19,7 @@
 \usepackage[normalem]{ulem}
 \usepackage[usenames,dvipsnames]{xcolor}
 \input{Math.tex}
+\input{ListStyle.tex}
 \usepackage{xfrac}
 
 \linespread{1.2}
