--- a/LA/ListStyle.tex
+++ b/LA/ListStyle.tex
@@ -138,3 +138,22 @@ keywordstyle=\color{ipython_green}\ttfamily,
 	backgroundcolor=\color{black},
 	basicstyle=\scriptsize\color{white}\ttfamily
 }
+\lstdefinestyle{C++}{
+    language=C++,
+    basicstyle=\ttfamily\small,        % 字型與大小
+    keywordstyle=\color{blue}\bfseries, % 關鍵字：藍色粗體
+    keywordstyle=[2]\color{ipython_green}, % 額外關鍵字 (型別等)
+    commentstyle=\color{mygreen},       % 註解顏色
+    stringstyle=\color{mymauve},        % 字串顏色
+    numbers=left,                       % 顯示行號
+    numberstyle=\tiny\color{halfgray},  % 行號樣式
+    stepnumber=1,                       % 每行顯示行號
+    numbersep=8pt,                      % 行號與程式碼距離
+    backgroundcolor=\color{ipython_bg}, % 背景色
+    frame=single,                       % 外框
+    rulecolor=\color{mygray},           % 框線顏色
+    breaklines=true,                    % 自動換行
+    tabsize=4,                          % tab 寬度
+    showstringspaces=false,             % 不顯示空格符號
+    captionpos=b,                       % 標題在底部
+}
