--- a/LA/header.tex
+++ b/LA/header.tex
@@ -17,6 +17,7 @@
 \usepackage[normalem]{ulem}
 \usepackage[usenames,dvipsnames]{xcolor}
 \input{Math.tex}
+\input{ListStyle.tex}
 \usepackage{xfrac}
 
 \linespread{1.2}
