--- a/LA/Lectures/lec_5.tex
+++ b/LA/Lectures/lec_5.tex
@@ -381,9 +381,9 @@ In the elimination process, we refer to the number, r, of pivots as the rank of 
 Now we shall disscuss the following four ideas:
 \begin{enumerate}[label=(\roman*)]
     \item linear independence or dependence
-    \item \textbf{spanning} a subspace
-    \item \textbf{basis} for a subspace
-    \item \textbf{dimension} of a subspace
+    \item \textbf{\redbox{spanning}} a subspace
+    \item \textbf{\redbox{basis}} for a subspace
+    \item \textbf{\redbox{dimension}} of a subspace
 \end{enumerate}
 
 \newpage
@@ -395,4 +395,3 @@ Now we shall disscuss the following four ideas:
     \]
     A set which is not linearly dependent is called linearly independent. If $S = \{v_1, v_2, \cdots, v_n\}$ then we say that $v_1, v_2, \cdots, v_n$ are linearly dependent/independent.
 \end{definition}
-
