--- a/IntroComputation/Lectures/lec_6.tex
+++ b/IntroComputation/Lectures/lec_6.tex
@@ -1,26 +1,26 @@
-\section{Pushdown Automata}
-\section{Deterministic Pushdown Automata}
+% \section{Pushdown Automata}
+% \section{Deterministic Pushdown Automata}
 
-\chapter{The Church-Turing Thesis}
+% \chapter{The Church-Turing Thesis}
 
-\section{Turing Machines}
-\section{Multitape Turing Machines}
-\section{Nondeterministic Turing Machines}
-\section{Hilbert's problems}
+% \section{Turing Machines}
+% \section{Multitape Turing Machines}
+% \section{Nondeterministic Turing Machines}
+% \section{Hilbert's problems}
 
-\chapter{Decidability}
+% \chapter{Decidability}
 
-\section{Decidability}
-\section{Halting Problem}
+% \section{Decidability}
+% \section{Halting Problem}
 
-\chapter{Reducibility}
+% \chapter{Reducibility}
 
-\section{Reducibility}
-\section{Computation Histories}
+% \section{Reducibility}
+% \section{Computation Histories}
 
-\chapter{Complexity Theory}
+% \chapter{Complexity Theory}
 
-\section{Big-O Notation}
-\section{Time Complexity}
-\section{Languages in P}
-\section{Languages in NP}
+% \section{Big-O Notation}
+% \section{Time Complexity}
+% \section{Languages in P}
+% \section{Languages in NP}
