Add lec 7 of LA.

--- a/LA/Lectures/lec_6.tex
+++ b/LA/Lectures/lec_6.tex
@@ -298,14 +298,15 @@ Here we will discuss four fundamental subspaces associated to $A_{m \times n}$
     \end{itemize}
 \end{enumerate}
 
-\subsection{Row space}
+\subsection{Row space $\mathcal{C}(A^T)$}
 
 The \redbox{row space} of $A$ (the subspace spanned by the rows of $A$), $\mathcal{C}(A^T)$. For an echelon matrix, its $r$ nonzero rows are independent and its row space is \red{$r$-dimensional}.
 
-\begin{proposition}
+\begin{proposition}[2M]
     The row space of $A$ has the same dimension $r$ as the row space of echelon form $U$ of $A$, and they have the same basis.
     \[
         \mathcal{C}(A^T) = \mathcal{C}(U^T)
     \]
     But in general, $\mathcal{C}(A) \neq \mathcal{C}(U)$.
 \end{proposition}
+
